--- a/app/less/main.less
+++ b/app/less/main.less
@@ -264,6 +264,8 @@ main.main {
   align-items: center;
   font-style: normal;
   border: 1px solid @white;
+  width: 26px;
+  white-space: nowrap;
 }
 
 .dark-blue-tag{
@@ -272,6 +274,15 @@ main.main {
 
 .light-green-tag {
   background: @light-green;
+}
+
+.ico {
+  width: 20px;
+  height: 20px;
+  svg {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 
