--- a/app/index.pug
+++ b/app/index.pug
@@ -12,7 +12,7 @@ prepend vars
 
 
 block links
-	link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=cyrillic' rel='stylesheet')
+	link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet")
 
 
 block head-end
