--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -444,6 +444,20 @@
   }
  }
 
+ .contacts-history {
+  .modal-row__layer {
+     max-height: 432px;
+     height: 100%;
+  }
+ }
+
+ .vacancies-history {
+  .modal-row__layer {
+     max-height: 382px;
+     height: 100%;
+  }
+ }
+
  .modal-row__contacts-history-row {
     display: flex;
     align-items: center;
