--- a/app/pug/layouts/work-popup/_contacts-history.pug
+++ b/app/pug/layouts/work-popup/_contacts-history.pug
@@ -67,3 +67,160 @@
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+		.modal-row__contacts-history-row
+			.modal-row__contacts-history-manager
+				i.tag.manager-tag.light-green-tag
+					|СК
+			.modal-row__contacts-history-date
+				time
+					|16.02.2019
+			.modal-row__contacts-history-text
+				i.ico.fax-ico
+					+svg2('fax')
+				p
+					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
+
