--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -30,3 +30,93 @@
 				time
 					|16.02.2019
 			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
+		.modal-row__vacancies-history-row
+			.modal-row__vacancies-history-labels
+			.modal-row__vacancies-history-date
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-terms
+				time
+					|16.02.2019
+			.modal-row__vacancies-history-type
