--- a/app/pug/layouts/row.pug
+++ b/app/pug/layouts/row.pug
@@ -31,12 +31,14 @@
 		.row__labels.row__cell
 			i.label.attention__label
 				span
-					|NO 
-				|293 - 17
+					|NO
+				span 
+					|293 - 17
 			i.label.success__label
 				span
-					|NO 
-				|211 - 8
+					|NO
+				span 
+					|211 - 8
 			//- i.label.success__label
 			//- 	span
 			//- 		|NO 
