--- a/app/pug/layouts/work-popup/_contacts-history.pug
+++ b/app/pug/layouts/work-popup/_contacts-history.pug
@@ -8,217 +8,217 @@
 			|добавить контакт
 	.modal-row__layer
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.dark-blue-tag
 					|AK
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|20.06.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.letter-ico
 					+svg2('letter')
 				p
 					|Прислал полный пакет документов :)
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.dark-blue-tag
 					|AK
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|18.06.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.phone-ico
 					+svg2('phone')
 				p
 					|Багатырчуки и парень Ани должны приехать 15-16 октября. Аня - вовремя, а вторая группа тоже вовремя. Соседу
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|03.03.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.message-ico
 					+svg2('message')
 				p
 					|Проверь почту
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|29.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.mail-ico
 					+svg2('mail')
 				p
 					|Hello! Sorry about the delay of answering you. Becaus eof the corona-situation I have been bussy organizing other things for
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
 					|Hei I spoke with Tania and Viktor and they should contact you. Exept them we will need 12 practicants.Total 14 aplications
 		.modal-row__contacts-history-row
-			.modal-row__contacts-history-manager
+			.modal-row__contacts-history-manager.modal-row__cell
 				i.tag.manager-tag.light-green-tag
 					|СК
-			.modal-row__contacts-history-date
+			.modal-row__contacts-history-date.modal-row__cell
 				time
 					|16.02.2019
-			.modal-row__contacts-history-text
+			.modal-row__contacts-history-text.modal-row__cell
 				i.ico.fax-ico
 					+svg2('fax')
 				p
