--- a/app/pug/layouts/work-popup/_manufactury-type.pug
+++ b/app/pug/layouts/work-popup/_manufactury-type.pug
@@ -9,7 +9,7 @@
 	.modal-row__layer
 		//.empty-layer
 		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select
+			.input-group.modal-row__manufactury-type-select.native-select 
 				select.info-area(name="")
 					option(value="" disabled selected)
 						|Выбрать
@@ -20,7 +20,7 @@
 			.input-group
 				input.info-area(type="text" name="")
 		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select
+			.input-group.modal-row__manufactury-type-select.native-select 
 				select.info-area(name="")
 					option(value="" disabled selected)
 						|Выбрать
