--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -5,118 +5,248 @@
 	.modal-row__layer
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.attention__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|03.03.2019  -  03.09.2019
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.success-2__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.success-2__label
+					span
+						|Практика
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|25.03.2017  -  25.07.2017
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|4 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.attention__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|5 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Поля
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.attention__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Поля
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.success__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
 		.modal-row__vacancies-history-row
 			.modal-row__vacancies-history-labels
+				i.label.attention__label
+					span
+						|NO
+					span 
+						|293 - 17
 			.modal-row__vacancies-history-date
 				time
-					|16.02.2019
+					|15.04.2018  -  15.07.2018
 			.modal-row__vacancies-history-terms
 				time
-					|16.02.2019
+					|6 мес
 			.modal-row__vacancies-history-type
+				i.label.primary__label
+					span
+						|Рабочая
+				p
+					|Свиньи
